<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="30dp"
        android:gravity="center"
        android:paddingEnd="30dp"
        android:orientation="vertical">

        <com.haris.kareem_driver.TextviewUtil.LabelTextview
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?attr/colorLabel"
            android:layout_gravity="start"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:textSize="@dimen/label_text_size"
            android:text="@string/important_notice"></com.haris.kareem_driver.TextviewUtil.LabelTextview>


        <com.haris.kareem_driver.TextviewUtil.NormalTextview
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?attr/colorNormal"
            android:layout_gravity="start"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="0dp"
            android:textSize="@dimen/normal_text_size"
            android:text="@string/cancel_important_notice"></com.haris.kareem_driver.TextviewUtil.NormalTextview>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="0dp"
            android:gravity="center_vertical|right">


            <com.haris.kareem_driver.TextviewUtil.NormalTextview
                android:id="@+id/txt_cancel"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:minWidth="70dp"
                android:gravity="center"
                android:visibility="visible"
                android:layout_marginEnd="20dp"
                android:textSize="@dimen/normal_text_size"
                android:textColor="?attr/colorTagline"
                android:text="@string/cancel"></com.haris.kareem_driver.TextviewUtil.NormalTextview>


            <com.haris.kareem_driver.TextviewUtil.NormalTextview
                android:id="@+id/txt_done"
                android:layout_width="wrap_content"
                android:minWidth="70dp"
                android:layout_height="35dp"
                android:gravity="center"
                android:visibility="visible"
                android:textSize="@dimen/normal_text_size"
                android:textColor="?attr/colorNormal"
                android:text="@string/done"></com.haris.kareem_driver.TextviewUtil.NormalTextview>






        </LinearLayout>



    </LinearLayout>


</RelativeLayout>