<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="vertical">


        <com.haris.kareem_driver.EditTextUtil.NormalEditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/edit_password"
            android:paddingStart="20dp"
            android:paddingLeft="20dp"
            android:background="@color/white"
            android:hint="@string/current_password"
            android:textSize="@dimen/normal_text_size"
            android:textColor="?attr/colorNormal"></com.haris.kareem_driver.EditTextUtil.NormalEditText>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="?attr/colorTagline"></TextView>

        <com.haris.kareem_driver.EditTextUtil.NormalEditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/edit_new_password"
            android:paddingStart="20dp"
            android:paddingLeft="20dp"
            android:background="@color/white"
            android:hint="@string/new_password"
            android:textSize="@dimen/normal_text_size"
            android:textColor="?attr/colorNormal"></com.haris.kareem_driver.EditTextUtil.NormalEditText>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="?attr/colorTagline"></TextView>


        <com.haris.kareem_driver.EditTextUtil.NormalEditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/edit_confirm_password"
            android:paddingStart="20dp"
            android:paddingLeft="20dp"
            android:background="@color/white"
            android:hint="@string/confirm_new_password"
            android:textSize="@dimen/normal_text_size"
            android:textColor="?attr/colorNormal"></com.haris.kareem_driver.EditTextUtil.NormalEditText>


        <LinearLayout
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical"
            android:id="@+id/layout_done"
            android:background="@drawable/bg_internet">



            <com.haris.kareem_driver.TextviewUtil.NormalTextview
                android:id="@+id/txt_done"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="@dimen/normal_text_size"
                android:text="@string/done"></com.haris.kareem_driver.TextviewUtil.NormalTextview>


            <net.bohush.geometricprogressview.GeometricProgressView
                android:id="@+id/progress_coupon"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_centerInParent="true"
                app:gp_color="?attr/colorBackground"
                app:gp_duration="800"
                android:visibility="gone"
                app:gp_figure_padding="2dp"
                app:gp_number_of_angles="20"
                app:gp_type="triangle" />

        </LinearLayout>


    </LinearLayout>


</RelativeLayout>