<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            layout="@layout/menu_dark_layout"
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"

            android:paddingTop="20dp"
            android:paddingStart="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingEnd="20dp"
            >

            <com.haris.kareem_driver.TextviewUtil.NormalTextview
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/label_text_size"
                android:text="@string/need_to_upload"
                android:textColor="?attr/colorNormal"></com.haris.kareem_driver.TextviewUtil.NormalTextview>

            <com.haris.kareem_driver.TextviewUtil.LabelTextview
                android:id="@+id/txt_document_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/heading_text_size"
                android:textColor="?attr/colorLabel"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="7dp"
                android:text="@string/driving_license"></com.haris.kareem_driver.TextviewUtil.LabelTextview>

            <com.haris.kareem_driver.TextviewUtil.NormalTextview
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/normal_text_size"
                android:text="@string/driving_license_tagline"
                android:textColor="?attr/colorTagline"></com.haris.kareem_driver.TextviewUtil.NormalTextview>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:orientation="horizontal"
                android:layout_marginTop="40dp"
                android:gravity="center">


                <LinearLayout
                    android:id="@+id/layout_add"
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:background="@drawable/bg_dotted_shape"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1">



                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:padding="6dp"
                        android:tint="@color/colorNormal"
                        android:src="@drawable/ic_add"></ImageView>


                </LinearLayout>


                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:id="@+id/recycler_view_picture"></androidx.recyclerview.widget.RecyclerView>

                <!--<LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:background="@drawable/bg_dotted_shape"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1">



                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:padding="4dp"
                        android:tint="@color/colorNormal"
                        android:src="@drawable/ic_add"></ImageView>


                    <com.makeramen.roundedimageview.RoundedImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="8dp"
                        app:riv_corner_radius="10dp"
                        android:visibility="gone"
                        android:scaleType="centerCrop"
                        android:src="@drawable/app_icon"
                        android:id="@+id/image_part_01"></com.makeramen.roundedimageview.RoundedImageView>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:background="@drawable/bg_dotted_shape"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1">


                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:padding="4dp"
                        android:tint="@color/colorNormal"
                        android:src="@drawable/ic_add"></ImageView>


                    <com.makeramen.roundedimageview.RoundedImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="8dp"
                        app:riv_corner_radius="10dp"
                        android:visibility="gone"
                        android:scaleType="centerCrop"
                        android:src="@drawable/app_icon"
                        android:id="@+id/image_part_02"></com.makeramen.roundedimageview.RoundedImageView>



                </LinearLayout>-->


            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_done"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="40dp"
                android:layout_marginLeft="40dp"
                android:layout_marginStart="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginEnd="40dp"
                android:gravity="center"
                android:background="@drawable/bg_call_to_action">


                <com.haris.kareem_driver.TextviewUtil.NormalTextview
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="@dimen/normal_text_size"
                    android:text="@string/upload_document"></com.haris.kareem_driver.TextviewUtil.NormalTextview>



            </LinearLayout>




        </LinearLayout>




    </LinearLayout>

</RelativeLayout>